<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/vocabularyFragment"
        android:icon="@drawable/ic_vocabulary"
        android:title="@string/nav_vocabulary" />

    <item
        android:id="@+id/quizFragment"
        android:icon="@drawable/ic_quiz"
        android:title="@string/nav_quiz" />

    <item
        android:id="@+id/flashcardFragment"
        android:icon="@drawable/ic_flashcard"
        android:title="@string/nav_flashcard" />

    <item
        android:id="@+id/srsFragment"
        android:icon="@drawable/ic_srs"
        android:title="@string/nav_srs" />

    <item
        android:id="@+id/progressFragment"
        android:icon="@drawable/ic_progress"
        android:title="@string/nav_progress" />
</menu>
